# Intel_AI_SW_Academy_9th

./: 1229_c  1229_cc  260107.md  260108-진도.md  README.md  chap13_251229_C언어.md  chap14_251229.md  chap15_251229.md  ~chap13_251229_C언어.md
Arduino/: 260112-진도.md
C/: CHAP17. 사용자 정의 자료형(구조체).md  Thread.md  chap10.배열과 포인터.md  chap12_251229.md  chap14_251229.md  chap15_251229.md  chap15_이중포인터.md  chap16_동적할당함수  chap17. 사용자 정의 자료형(구조체).md  chap18. 파일입출력.md  chap9.포인터.md  chap_12.문자열.md  chap_13.변수의 영역과 데이터 공유.md  chap_13.변수의 영역과 데이터 공유.md.  chap_14.다차원배열.md  chap_15.이중포인터.md  chap_16.동적할당함수  함수-포인터-사례.md
C_자료구조/: chap2_순환.md  chap4_스택.md  chap5.큐.md  chap6.연결리스트.md  chap6.큐  chap6.큐.md
Linux/: .gitignore  Hex_editor_궁금증_정리.md  gdb사용법.md  wsl_dev_env.md  wsl_install.md
Linux/my_project/: CMakeLists.txt  Makefile
Linux/my_project/app/: main_static
Linux/my_project/include/: mymath.h
Linux/my_project/src/: substract.c
Linux/project/: a.out  hello  hello.c  main  main.c
Linux/project/backup/: 0107  0107.c  callback  callback.c  hello  hello.c  hello.s  hello_d  recursive  recursive.c  simple  simple.c  struct_array  struct_array.c
Linux/project/backup/global_variable/: config.c  main  main.c  player.c
Linux/project/backup/my_player/: CmakeLists.txt
Linux/project/my_project/app/: main.c  main_shared
Linux/project/my_project/src/: add.c
복습/: 260107-복습.md
진도/: 260109-진도.md
